# sysmon-pytk

./: .all-contributorsrc  .gitignore  .gitmodules  .mypy.ini  .pydocstylerc  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  _common.py  about.py  app_locale.py  bandit.yaml  cli_monitor.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.cfg  setup.py  tkabout.py  tkmeter.py  tkmodal.py  widgets.py
.github/workflows/: docs.yml
.reuse/: dep5
apidocs/: make.py
apidocs/_templates/: custom.css  index.html.jinja2  module.html.jinja2  theme.css
docs/: CLI_USAGE.md  DEVELOPING.md  PRE-INSTALLATION.md
images/: main_window.png.license
locale/: Makefile  app.pot  app.pot.license
locale/de/LC_MESSAGES/: app.po
locale/en/LC_MESSAGES/: app.po
locale/es/LC_MESSAGES/: app.po
modals/: _base_modal.py  about_modal.py  cpu_modal.py  disk_usage_modal.py  font_modal.py  mem_usage_modal.py  settings_modal.py  temperature_modal.py
mypy/stubs/darkdetect/: __init__.pyi  _dummy.pyi  _linux_detect.pyi  _mac_detect.pyi  _windows_detect.pyi
src/sysmon_pytk/: __about__.py  __init__.py  _common.py  _file_utils.py  app_locale.py  cli_monitor.py  main_gui.py  settings.py  tkabout.py  tkapplication.py  tkmeter.py  tkmodal.py  widgets.py
src/sysmon_pytk/images/: icon-lg.png.license
src/sysmon_pytk/locale/: Makefile
src/sysmon_pytk/locale/en/LC_MESSAGES/: app.po
sysmon_pytk/: __init__.py  _common.py  about.py  app_locale.py  application.py  callables.pyi  cli_monitor.py  cli_sysmon.py  desktop_menu.py  file_utils.py  font_utils.py  gui_monitor.py  gui_sysmon.py  settings.py  style_manager.py  translator.py
sysmon_pytk/images/: .gitignore  Makefile
sysmon_pytk/locale/: Makefile  app.pot  argparse.pot
sysmon_pytk/locale/de/LC_MESSAGES/: app.po  argparse.po
sysmon_pytk/locale/en/LC_MESSAGES/: app.po  argparse.po
sysmon_pytk/locale/es/LC_MESSAGES/: app.po  argparse.po
sysmon_pytk/locale/nb_NO/LC_MESSAGES/: app.po  argparse.po
sysmon_pytk/modals/: __init__.py  _base_modal.py  about_modal.py  cpu_modal.py  disk_usage_modal.py  font_modal.py  mem_usage_modal.py  messagebox.py  messagebox_base.py  settings_modal.py  temperature_modal.py
sysmon_pytk/modals/messagebox/: __init__.py  base.py  mb_functions.py
sysmon_pytk/widgets/: __init__.py  autoscrollbar.py  button_mixin.py  dropdown.py  edit_menu.py  meter.py  meters.py  scalespinner.py  scrolling_text.py  tooltip.py  url_label.py
sysmon_pytk/widgets/buttons/: __init__.py
sysmon_pytk/widgets/meters/: __init__.py  cpu_meter.py  disk_meter.py  ram_meter.py  temp_meter.py  updating_meter.py
